2001-12-17  Matt Armstrong  <matt@lickey.com>

	* Cookie.py (make_keyword_cookie): Substitute '?' for keyword
	chars not part of an RFC2822 atom.  This prevents us from creating
	an invalid keyword address.

2001-12-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Cookie.py (make_sender_cookie): Lowercase the address before
	generating the cookie.  Otherwise, mixed or uppercase sender
	addresses will fail verification.
	Patch contributed by Brian Lalor.

2001-12-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Version.py (ALL): Change SUMMARY to ALL.

2001-12-14  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* MTA.py (Sendmail.__init__): New class to support Sendmail.  We
	just inherit from the MTA superclass with no method overrides.

	* Defaults.py: Add support for Sendmail.

2001-12-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py: Remove PYTHON_VERSION, PLATFORM, and
	DELIVERY_AGENT.  This info is now kept in Version.py.

	* Version.py: New module to keep all versioning information in one
	easily accessible place.

2001-12-12  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (FINGERPRINT): New list which contains the headers
	to be used to create X-TMDA-Fingerprint.

	* Cookie.py (make_fingerprint): New function to create an HMAC
	from one or more message headers.

2001-12-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (PURGED_HEADERS): New variable specifying a list of
	headers to remove before sending outgoing mail.

2001-12-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (DELIVERY_AGENT): Modify DELIVERY_AGENT to use
	distutils.util.get_platform() if available which is more
	descriptive than sys.platform.
	
2001-12-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py: Only import time once at the toplevel.

	* Defaults.py: Remove TIMEZONE, and import the Util module after